--- a/style.css
+++ b/style.css
@@ -72,45 +72,47 @@
 }
 
 .btn-encriptar {
-    align-items: center;
-    justify-content: center;
-    padding: 2%;
-    gap: 8px;
-    width: 25%;
-    background-color: #0a3871;
-    border-radius: 24px;
-    font-family: "Inter";
-    font-size: 18px;
-    line-height: 19px;
-    text-align: center;
-    color: #fff;
+align-items: center;
+justify-content: center;
+padding: 1.5%;
+gap: 5px;
+width: 20%;
+background-color: #0a3871;
+border-radius: 20px;
+font-family: "Inter";
+font-size: 16px;
+line-height: 17px;
+text-align: center;
+color: #fff;
+margin-right: 10px;
 }
 
 .btn-desencriptar {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    padding: 2%;
-    gap: 8%;
-    width: 25%;
-    background: #d8dfe8;
-    border: 1px solid #0a3871;
-    border-radius: 24px;
-    font-family: "Inter";
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 19px;
-    text-align: center;
-    color: #0a3871;
+box-sizing: border-box;
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+justify-content: center;
+padding: 1.5%;
+gap: 5%;
+width: 20%;
+background: #d8dfe8;
+border: 1px solid #0a3871;
+border-radius: 20px;
+font-family: "Inter";
+font-weight: 400;
+font-size: 16px;
+line-height: 17px;
+text-align: center;
+color: #0a3871;
+margin-left: 10px;
 }
 
-.btn-desencriptar:hover,
-.btn-encriptar:hover {
-    margin: 0.3%;
-    width: 24.5%;
-    padding: 1.8%;
+.btn-encriptar:hover,
+.btn-desencriptar:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .encriptado {
